--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,24 @@
 html {
     @apply scroll-smooth;
 }
+.nav-active {
+    @apply border-b-2 border-b-gray-800 dark:border-b-gray-400;
+}
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    @apply bg-primary rounded-xl;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px black;
+    border-radius: 4rem;
+}
+::-webkit-scrollbar-thumb:hover {
+    @apply bg-primary/80;
+}
+::-webkit-scrollbar {
+    scrollbar-width: thin;
+}
